# oj-harjoitustyo

./: README.md  pyproject.toml
dokumentaatio/: Työaikakirja.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py.save
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: .index.py.swp  index.py  ingredientscrape.py  test.py
src/tests/: scrape_test.py
